--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@babel/runtime": "^7.21.5",
     "@hookform/resolvers": "^5.2.2",
+    "@iconify-json/lucide": "^1.2.87",
     "@nutui/nutui-react-taro": "^3.0.18",
     "@tarojs/components": "4.1.10",
     "@tarojs/helper": "4.1.10",
@@ -70,6 +71,7 @@
     "@babel/core": "^7.8.0",
     "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/preset-react": "^7.24.1",
+    "@egoist/tailwindcss-icons": "^1.9.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tarojs/cli": "4.1.10",
     "@tarojs/test-utils-react": "^0.1.1",
