--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "taro4-nutui-template",
+  "name": "mini",
   "version": "1.0.0",
   "private": true,
-  "description": "Taro 4 + React 18 + NutUI 多端小程序开发模板",
+  "description": "小程序",
   "templateInfo": {
     "name": "react-NutUI",
     "typescript": true,
@@ -10,15 +10,15 @@
     "framework": "React"
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
+    "build:weapp": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type weapp",
+    "build:swan": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type swan",
+    "build:alipay": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type alipay",
+    "build:tt": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type tt",
+    "build:h5": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type h5",
+    "build:rn": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type rn",
+    "build:qq": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type qq",
+    "build:jd": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type jd",
+    "build:quickapp": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type quickapp",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
@@ -28,6 +28,7 @@
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
+    "clean": "rm -rf dist",
     "postinstall": "weapp-tw patch"
   },
   "browserslist": [
@@ -41,21 +42,21 @@
     "@hookform/resolvers": "^5.2.2",
     "@iconify-json/lucide": "^1.2.87",
     "@nutui/nutui-react-taro": "^3.0.18",
-    "@tarojs/components": "4.1.10",
-    "@tarojs/helper": "4.1.10",
-    "@tarojs/plugin-framework-react": "4.1.10",
-    "@tarojs/plugin-html": "4.1.10",
-    "@tarojs/plugin-platform-alipay": "4.1.10",
-    "@tarojs/plugin-platform-h5": "4.1.10",
-    "@tarojs/plugin-platform-jd": "4.1.10",
-    "@tarojs/plugin-platform-qq": "4.1.10",
-    "@tarojs/plugin-platform-swan": "4.1.10",
-    "@tarojs/plugin-platform-tt": "4.1.10",
-    "@tarojs/plugin-platform-weapp": "4.1.10",
-    "@tarojs/react": "4.1.10",
-    "@tarojs/runtime": "4.1.10",
-    "@tarojs/shared": "4.1.10",
-    "@tarojs/taro": "4.1.10",
+    "@tarojs/components": "4.1.11",
+    "@tarojs/helper": "4.1.11",
+    "@tarojs/plugin-framework-react": "4.1.11",
+    "@tarojs/plugin-html": "4.1.11",
+    "@tarojs/plugin-platform-alipay": "4.1.11",
+    "@tarojs/plugin-platform-h5": "4.1.11",
+    "@tarojs/plugin-platform-jd": "4.1.11",
+    "@tarojs/plugin-platform-qq": "4.1.11",
+    "@tarojs/plugin-platform-swan": "4.1.11",
+    "@tarojs/plugin-platform-tt": "4.1.11",
+    "@tarojs/plugin-platform-weapp": "4.1.11",
+    "@tarojs/react": "4.1.11",
+    "@tarojs/runtime": "4.1.11",
+    "@tarojs/shared": "4.1.11",
+    "@tarojs/taro": "4.1.11",
     "ahooks": "^3.9.6",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -73,9 +74,9 @@
     "@babel/preset-react": "^7.24.1",
     "@egoist/tailwindcss-icons": "^1.9.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "@tarojs/cli": "4.1.10",
+    "@tarojs/cli": "4.1.11",
     "@tarojs/test-utils-react": "^0.1.1",
-    "@tarojs/vite-runner": "4.1.10",
+    "@tarojs/vite-runner": "4.1.11",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^25.0.10",
     "@types/react": "^18.0.0",
@@ -83,9 +84,10 @@
     "@typescript-eslint/parser": "^6.2.0",
     "@vitejs/plugin-react": "^4.1.0",
     "babel-plugin-import": "^1.13.8",
-    "babel-preset-taro": "4.1.10",
+    "babel-preset-taro": "4.1.11",
+    "cross-env": "^10.1.0",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "4.1.10",
+    "eslint-config-taro": "4.1.11",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
