--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "framework": "React"
   },
   "scripts": {
-    "build:weapp": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type weapp",
-    "build:swan": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type swan",
-    "build:alipay": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type alipay",
-    "build:tt": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type tt",
-    "build:h5": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type h5",
-    "build:rn": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type rn",
-    "build:qq": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type qq",
-    "build:jd": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type jd",
-    "build:quickapp": "cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch",
-    "clean": "rm -rf dist",
+    "build:weapp": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type weapp",
+    "build:swan": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type swan",
+    "build:alipay": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type alipay",
+    "build:tt": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type tt",
+    "build:h5": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type h5",
+    "build:rn": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type rn",
+    "build:qq": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type qq",
+    "build:jd": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type jd",
+    "build:quickapp": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type quickapp",
+    "dev:weapp": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type weapp --watch",
+    "dev:swan": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type swan --watch",
+    "dev:alipay": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type alipay --watch",
+    "dev:tt": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type tt --watch",
+    "dev:h5": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type h5 --watch",
+    "dev:rn": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type rn --watch",
+    "dev:qq": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type qq --watch",
+    "dev:jd": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type jd --watch",
+    "dev:quickapp": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type quickapp --watch",
+    "clean": "rimraf dist .taro",
     "postinstall": "weapp-tw patch"
   },
   "browserslist": [
@@ -93,6 +93,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.18",
     "react-refresh": "^0.11.0",
+    "rimraf": "^6.1.2",
     "sass": "^1.60.0",
     "stylelint": "^14.4.0",
     "tailwindcss": "^4.1.18",
