--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "framework": "React"
   },
   "scripts": {
-    "build:weapp": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type weapp",
-    "build:swan": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type swan",
-    "build:alipay": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type alipay",
-    "build:tt": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type tt",
-    "build:h5": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type h5",
-    "build:rn": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type rn",
-    "build:qq": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type qq",
-    "build:jd": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type jd",
-    "build:quickapp": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type quickapp",
-    "dev:weapp": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type weapp --watch",
-    "dev:swan": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type swan --watch",
-    "dev:alipay": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type alipay --watch",
-    "dev:tt": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type tt --watch",
-    "dev:h5": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type h5 --watch",
-    "dev:rn": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type rn --watch",
-    "dev:qq": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type qq --watch",
-    "dev:jd": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type jd --watch",
-    "dev:quickapp": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\" taro build --type quickapp --watch",
+    "pre:prod": "pnpm clean && cross-env NODE_ENV=production NODE_OPTIONS=\"--max-old-space-size=4096\"",
+    "pre:dev": "pnpm clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max-old-space-size=4096\"",
+    "build:weapp": "pnpm pre:prod taro build --type weapp",
+    "build:swan": "pnpm pre:prod taro build --type swan",
+    "build:alipay": "pnpm pre:prod taro build --type alipay",
+    "build:tt": "pnpm pre:prod taro build --type tt",
+    "build:h5": "pnpm pre:prod taro build --type h5",
+    "build:rn": "pnpm pre:prod taro build --type rn",
+    "build:qq": "pnpm pre:prod taro build --type qq",
+    "build:jd": "pnpm pre:prod taro build --type jd",
+    "build:quickapp": "pnpm pre:prod taro build --type quickapp",
+    "dev:weapp": "pnpm pre:dev taro build --type weapp --watch",
+    "dev:swan": "pnpm pre:dev taro build --type swan --watch",
+    "dev:alipay": "pnpm pre:dev taro build --type alipay --watch",
+    "dev:tt": "pnpm pre:dev taro build --type tt --watch",
+    "dev:h5": "pnpm pre:dev taro build --type h5 --watch",
+    "dev:rn": "pnpm pre:dev taro build --type rn --watch",
+    "dev:qq": "pnpm pre:dev taro build --type qq --watch",
+    "dev:jd": "pnpm pre:dev taro build --type jd --watch",
+    "dev:quickapp": "pnpm pre:dev taro build --type quickapp --watch",
     "clean": "rimraf dist .taro",
     "postinstall": "weapp-tw patch"
   },
