--- a/package.json
+++ b/package.json
@@ -31,7 +31,13 @@
     "dev:jd": "pnpm pre:dev taro build --type jd --watch",
     "dev:quickapp": "pnpm pre:dev taro build --type quickapp --watch",
     "clean": "rimraf dist .taro",
-    "postinstall": "weapp-tw patch"
+    "postinstall": "weapp-tw patch",
+    "lint": "eslint src --ext .ts,.tsx,.js,.jsx --fix",
+    "lint:style": "stylelint \"src/**/*.{css,scss,less}\" --fix",
+    "type-check": "tsc --noEmit",
+    "preview:h5": "pnpm build:h5 && serve dist",
+    "analyze:bundle": "cross-env ANALYZE=true pnpm build:h5",
+    "test": "echo \"暂无测试\" && exit 0"
   },
   "browserslist": [
     "last 3 versions",
@@ -87,6 +93,7 @@
     "@vitejs/plugin-react": "^4.1.0",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "4.1.11",
+    "consola": "^3.4.2",
     "cross-env": "^10.1.0",
     "eslint": "^8.12.0",
     "eslint-config-taro": "4.1.11",
