--- a/project.config.json
+++ b/project.config.json
@@ -1,26 +1,26 @@
 {
   "miniprogramRoot": "dist/",
-  "projectname": "taro4template",
-  "description": "小程序",
-  "appid": "",
+  "projectname": "joykings3d-mini",
+  "description": "-星链小程序",
+  "appid": "wxe29dddb4a8c6e1d4",
   "setting": {
     "urlCheck": true,
     "es6": false,
-    "enhance": false,
+    "enhance": true,
     "compileHotReLoad": true,
     "useStaticServer": true,
     "postcss": false,
     "preloadBackgroundData": false,
-    "minified": false,
+    "minified": true,
     "newFeature": true,
     "autoAudits": false,
     "coverView": true,
-    "showShadowRootInWxmlPanel": false,
+    "showShadowRootInWxmlPanel": true,
     "scopeDataCheck": false,
-    "useCompilerModule": false,
+    "useCompilerModule": true,
     "compileWorklet": false,
     "uglifyFileName": false,
-    "uploadWithSourceMap": true,
+    "uploadWithSourceMap": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
     "minifyWXSS": true,
@@ -35,7 +35,9 @@
       "ignore": [],
       "disablePlugins": [],
       "outputPath": ""
-    }
+    },
+    "ignoreDevUnusedFiles": false,
+    "ignoreUploadUnusedFiles": false
   },
   "compileType": "miniprogram",
   "simulatorType": "wechat",
